...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:layout_behavior="@string/bottom_sheet_behavior">

            <TextView
                android:id="@+id/tv_date_time"
                android:layout_width="308dp"
                android:layout_height="48dp"
                android:layout_below="@+id/tv_temp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="29dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="38dp"
...
